# poo2_unit1_week_1_2021_0_exercise

./: .gitignore  CMakeLists.txt  README.md  calculate_pentagon.cpp  calculate_pentagon.h  main.cpp  number.cpp  number.h  quick_sort.cpp  quick_sort.h  search_odds.cpp  search_odds.h
